--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
-    "next": "13.4.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-zmage": "^0.8.5-beta.36",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
