--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-zmage": "^0.8.5-beta.36",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "react-image-lightbox": "^5.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
